contrast issue fix

--- a/chamber/lesson3/styles/css1.css
+++ b/chamber/lesson3/styles/css1.css
@@ -110,7 +110,7 @@ nav ul li a {
 
 
 nav a:hover {
-    background-color: #44bbcd;
+    background-color: #DEE2C7;
 
     color: black;
 }
