--- a/chamber/lesson3/styles/css3.css
+++ b/chamber/lesson3/styles/css3.css
@@ -14,7 +14,7 @@
 }
 
 html {
-    background-color: #dee2c7;
+    background-color: #717A7B;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
